--- a/Shoku.html
+++ b/Shoku.html
@@ -1,8 +1,8 @@
 <html>
     <body>
 
-        <a href="https://discord.gg/F5WbRVWCaT">
-            <button class="DefaultButton">Join Booga Server</button>
+        <a href="https://discord.gg/JAawQthK">
+            <button class="DefaultButton">Join Shoku Server</button>
         </a>
 
         <h1>Scripts Download</h1>
