--- a/Shoku.html
+++ b/Shoku.html
@@ -1,51 +1,28 @@
-<html>
-    <body>
-
-        <a href="https://discord.gg/JAawQthK">
-            <button class="DefaultButton">Join Shoku Server</button>
-        </a>
-
-        <h1>Scripts Download</h1>
-
-        <ul>
-
-            <li>
-                <a href="/Scripts/BOOGA HUB V5.5.lua" download>
-                    <button class="DefaultButton">BOOGA HUB V5.5</button>
-                </a>
-            </li>
-            
-            <li>
-                <a href="/Scripts/BOOGA_AUTOBROLY_V10.lua" download>
-                    <button class="DefaultButton">BOOGA AUTOBROLY V10</button>
-                </a>
-            </li>
-
-            <li>
-                <a href="/Scripts/BOOGA_CMDS_V2.lua" download>
-                    <button class="DefaultButton">BOOGA CMDS V2</button>
-                </a>
-            </li>
-
-            <li>
-                <a href="/Scripts/BOOGA_AUTOTOP_V2.lua" download>
-                    <button class="DefaultButton">BOOGA AUTO TOP V2</button>
-                </a>
-            </li>
-
-            <li>
-                <a href="/Scripts/BOOGA INFINITE STATS V4.lua" download>
-                    <button class="DefaultButton">BOOGA INF STATS V4</button>
-                </a>
-            </li>
-
-            <li>
-                <a href="/Scripts/BoogaRejoiner.exe" download>
-                    <button class="DefaultButton">BOOGA AUTOREJOINER (FREE VERSION)</button>
-                </a>
-            </li>
-
-        </ul>
-
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DADA Page</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #333; /* Dark background color */
+            color: #fff; /* White text color */
+            font-family: Arial, sans-serif; /* Font style */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Full viewport height */
+        }
+        h1 {
+            font-size: 4em; /* Large title size */
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>DADA</h1>
+</body>
 </html>
